route get fixed

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -26,7 +26,8 @@
                 <input type="date" id="date" value="23/06/2022">
             </div>
             <div id="main-button">
-                <a href=" " target="_blank" id="button-searched">Search </a>
+                //a modifier//
+                <input class="bouton-lien" type="button" value="search" />
             </div>
         </div>
 
@@ -38,10 +39,7 @@
                 <p id="text-train">Its time to book your future trip</p>
             </div>
 
-            <div id="notfound">
-                <img id="no-found" src="./images/notfound.png" alt="no trip found">
-                <p id="no-train">No trip found</p>
-            </div>
+
 
 
 
