Delete Trip from cart Route created front updated

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -20,7 +20,7 @@
                     <td id="firstColumn">Paris-Lyon</td>
                     <td id="secondColumn">20:09</td>
                     <td id="thirdColumn">103,00€</td>
-                    <td id="fourthColumn"><span class="delete">✖</span></td>
+                    <td id="fourthColumn"><input class="delete" type="button" value="delete" /></td>
                 </tr>
             </table>
 
