--- a/frontend/home.html
+++ b/frontend/home.html
@@ -35,7 +35,10 @@
 
             <div id="acceuil">
                 <img id="img-train" src="./images/train.png" alt="image train reservation">
-                <p id="text-train">Its time to book your future trip</p>
+                <div id="booked">
+                    <p id="text-train">Its time to book your future trip</p>
+                    <input class="booking" type="button" value="Book" />`
+                </div>
             </div>
 
 
