modified:   frontend/booking.js

--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart</title>
+    <title>My bookings</title>
     <link rel="stylesheet" href="./booking.css">
 </head>
 
 <body>
 
     <div id="booking">
-        <div id="booking-header"> My booking </div>
+        <div id="booking-header"> My bookings </div>
 
         <div class="text-container">
 
