--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -32,7 +32,7 @@
 
     <div id="total">
 
-        <div id="montant">
+        <!-- <div id="montant">
             Total :
         </div>
 
@@ -40,7 +40,7 @@
             <a href=" " target="_blank" class="bouton-lien">Purchase</a>
         </div>
 
-    </div>
+    </div> -->
 
     </div>
 
